# hip-training-series

./: README.md
Lecture1/: 01 Exercises for HIP Introduction.md
Lecture1/HIP/dgemm/: CMakeLists.txt
Lecture1/HIP/dgemm/src/: CMakeLists.txt  dgemm.cpp
Lecture1/HIP/hip-stream/: CMakeLists.txt  Makefile
Lecture1/HIP/saxpy/: Makefile  README
Lecture1/HIP/vectorAdd/: CMakeLists.txt  Makefile
Lecture1/HIP/vectorAdd_w_cpp_ext/: Makefile
Lecture1/HIP/vectorAdd_w_cu_ext/: Makefile
Lecture2/: 02 Exercises for Application Porting.md
Lecture2/HIPIFY/: CMakeLists.txt  Makefile.allhipcc  Makefile.new  Makefile.twopath  frontier_pennant_setup.sh
Lecture2/HIPIFY/Pennant-hip/: CMakeLists.txt  Makefile
Lecture2/HIPIFY/mini-nbody/: Exercise2_frontier.sbatch  Exercise2_perlmutter.sbatch
Lecture3/: 03 Exercises for Occupancy.md
Lecture3/Occupancy/: CMakeLists.txt  Makefile  run_cmaketests.sh  run_maketests.sh
Lecture3/Occupancy/Occupancy_naive/: CMakeLists.txt  Makefile  occupancy_mxv_naive.cpp
Lecture3/Occupancy/Occupancy_shmem/: CMakeLists.txt  Makefile  occupancy_mxv_shmem.cpp
Lecture3/Occupancy/Occupancy_shmem_A/: CMakeLists.txt  Makefile  occupancy_mxv_shmem_A.cpp
Lecture3/Occupancy/Occupancy_shmem_batched/: CMakeLists.txt  Makefile  occupancy_mxv_shmem_batched.cpp
Lecture4/: 04 Performance_Timelines_Exercises.md
Lecture4/jacobi/: CMakeLists.txt  rocprof_wrapper.sh
Lecture5/: 05-OmniperfExamples_Exercises.html  05-OmniperfExamples_Exercises.md
Lecture5/OmniperfExamples/: README-Frontier-users.md  README-Perlmutter-users.md
(+8 files in other folders)
